--- a/client/templates/lcboSearch.html
+++ b/client/templates/lcboSearch.html
@@ -1,4 +1,3 @@
-<div>
   <section class="content-header">
     <h1>LCBO Search</h1>
   </section>
@@ -60,7 +59,10 @@
                 Name
               </th>
               <th>
-                Location
+                Street Address
+              </th>
+              <th>
+                City
               </th>
               <th>
                 Quantity
@@ -75,6 +77,9 @@
               </td>
               <td>
                 {{store.address_line_1}}
+              </td>
+              <td>
+                {{store.city}}
               </td>
               <td>
                 {{store.quantity}}
@@ -95,4 +100,3 @@
       </div>
     </div>
   </section>
-</div>
