tally-lcbo: Hide old store info when searching new products

--- a/client/templates/lcboSearch.html
+++ b/client/templates/lcboSearch.html
@@ -40,7 +40,7 @@
                 {{product.package}}
               </td>
               <td>
-                <img ng-src="{{product.image_thumb_url}}" alt="product image" height="42" width="42">
+                <img ng-src="{{product.image_thumb_url}}" alt="product image not available" height="42" width="42">
               </td>
             </tr>
           </tbody>
