tally-lcbo: Add product title to store table

--- a/client/templates/lcboSearch.html
+++ b/client/templates/lcboSearch.html
@@ -52,6 +52,9 @@
     </div>
     <div ng-if="$ctrl.storeInfo.displayTable" class="box">
       <div class="box-body">
+        <p class="lead">
+          {{$ctrl.storeInfo.product.name}} - {{$ctrl.storeInfo.product.package}}
+          </p>
         <table  class="table table-hover">
           <tbody>
             <tr>
